libhdate (1.4.0)

  * Michael Kaminsky - libhdate now reports the 2nd day of yom
    tov on Sukkot and Peseach as Yom Tov and not Chol Hamoed.
  * Cange C++ API - insert the location and diaspora flag as
    part of the hdate object.
  * Docomentation - separate the c and the cpp docs, more readable.

  -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 8 Aug 2005 22:13
  
libhdate (1.3.1)

  * Add "const correctness" patch from Markus Elfring (elfring).
  * Manual page seems to contain a hyphen where a minus sign was 
intended, patch by Lior Kaplan.
  * Remove the debian directory from the ziped package.

    -- Yaacov Zamir <kzamir@wall.co.il>  Sat, 30 Jul 2005 22:13

libhdate (1.3.0)

  * Add examples to the doc directory
  * doc directory is now /usr/doc/libhdate0 and no /usr/doc/hdate
  * make int_to_string aware of LANGUAGE system variable, make it more gettext compatible

    -- Yaacov Zamir <kzamir@wall.co.il>  Wed, 27 Jul 2005 18:13

libhdate (1.0.1)

  * first major reales number.
  * start to number the shared library.
  * stable api.
  * updated utility programs hdate/hcal.
  * added man files for library and utility programs.
  * python and perl bindings.
  * free pascal binding by Ido Kanner <idokan@gmail.com>
  * ru, fr, he, es translations, thanks to Peled Esti and Boris Peterberg.
  * added debian dir and RH spec file for easy packing, thanks to Oron Peled.

    -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 08 March 2005 18:13
    
libhdate (0.30.0)

  * add es_MX translation by Peled Esti <esti@actcom.co.il>  
  * initial russian translation by Boris Peterberg

   -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 08 March 2005 18:13
       
libhdate (0.30.0)

  * cpp, python and perl bindings
  * examples for the new libhdate bindings 

   -- Yaacov Zamir <kzamir@wall.co.il>  Fri, 04 March 2005 15:19:29

libhdate (0.22.0)

  * Michael Kaminsky's patch to Shavot II on diaspora reading.

   -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 28 Feb 2005 08:12:31
